<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content_transaction_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_transaction_detail"
            tools:context="com.mastercard.labs.mpqrmerchant.transaction.detail.TransactionDetailActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@color/colorVeryLightGrey">

        <ImageView
                android:id="@+id/img_tick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_tick"
                android:layout_alignParentTop="true"/>

        <TextView
                android:id="@+id/txt_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_below="@id/img_tick"
                android:textColor="@color/colorTextGreen"
                android:textSize="@dimen/size_x"
                android:text="@string/paid"/>

        <TextView
                android:id="@+id/txt_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorTextMainColor"
                android:textSize="@dimen/size_32"
                android:layout_below="@id/txt_paid"
                tools:text="INR 102.90"/>

        <TextView
                android:id="@+id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_tip_inclusive"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/size_x"
                android:layout_below="@id/txt_amount_value"/>

        <TextView
                android:id="@+id/txt_tip_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorTextMainColor"
                android:textSize="@dimen/size_32"
                android:layout_below="@id/txt_amount"
                tools:text="INR 15.10"/>

        <TextView
                android:id="@+id/txt_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/size_x"
                android:layout_below="@id/txt_tip_value"/>

        <TextView
                android:id="@+id/txt_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/size_x"
                android:layout_below="@id/txt_tip"
                tools:text="15/2/17 11:54 AM"/>


        <RelativeLayout
                android:id="@+id/rl_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_below="@id/txt_transaction_date"
                android:background="@color/colorWhite">

            <TextView
                    android:id="@+id/txt_invoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_no"
                    android:textSize="@dimen/size_x"
                    android:textAllCaps="true"
                    android:labelFor="@+id/txt_invoice_value"/>

            <TextView
                    android:id="@+id/txt_invoice_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_invoice"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorTextMainColor"
                    tools:text="12345678"/>
        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/rl_terminal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_below="@id/rl_invoice"
                android:background="@color/colorWhite">

            <TextView
                    android:id="@+id/txt_terminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminal_no"
                    android:textSize="@dimen/size_x"
                    android:textAllCaps="true"
                    android:labelFor="@+id/txt_invoice_value"/>

            <TextView
                    android:id="@+id/txt_terminal_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_terminal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorTextMainColor"
                    tools:text="12345678"/>
        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/rl_reference_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_below="@id/rl_terminal"
                android:background="@color/colorWhite">

            <TextView
                    android:id="@+id/txt_reference_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reference_id"
                    android:textSize="@dimen/size_x"
                    android:textAllCaps="true"
                    android:labelFor="@+id/txt_invoice_value"/>

            <TextView
                    android:id="@+id/txt_reference_id_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_reference_id"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorTextMainColor"
                    tools:text="12345678"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>